--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentstack/json-rte-serializer": "^2.0.1",
     "@next/font": "13.1.2",
     "bootstrap": "5.2",
     "contentstack": "^3.15.5",
