Updated readme file

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ API_KEY=YOUR_API_KEY
 DELIVERY_TOKEN=YOUR_DELIVERY_TOKEN
 ENVIRONMENT=YOUR_PUBLISHING_ENVIRONMENT
 REGION=(OPTIONAL) Eg- eu
+AUTHORIZATION=YOUR_STACK_MANAGEMENT_TOKEN
+NEXT_PUBLIC_APP_BASE_URL=http://localhost:3010
